--- a/index.html
+++ b/index.html
@@ -36,38 +36,38 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide02.jpg" alt="" />
+					<img src="images/slide04.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Magna etiam</h2>
+							<p>Infraestructura como servicio en la nube</p>
+							<h2>Servicios AWS</h2>
 						</header>
 					</div>
 				</article>
 				<article>
-					<img src="images/slide03.jpg"  alt="" />
+					<img src="images/linux.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-							<h2>Tempus dolor</h2>
+							<p>Administracion de Servidores Especializada</p>
+							<h2>Linux experts</h2>
 						</header>
 					</div>
 				</article>
 				<article>
-					<img src="images/slide04.jpg"  alt="" />
+					<img src="images/docker.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-							<h2>Etiam feugiat</h2>
+							<p>Gestión de microservicios On premise y en la nube</p>
+							<h2>Docker</h2>
 						</header>
 					</div>
 				</article>
 				<article>
-					<img src="images/slide05.jpg"  alt="" />
+					<img src="images/kubernetes.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-							<h2>Lorem adipiscing</h2>
+							<p>Orquestación de Servicios On premise y en la nube</p>
+							<h2>Kubernetes</h2>
 						</header>
 					</div>
 				</article>
@@ -172,7 +172,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; KUDOHUB. All rights reserved.
 				</div>
 			</footer>
 
