--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="servicios.html">Servicios</a></li>
+	                                <li><a href="nosotros.html">Acerca De Kudohub</a></li>
+					<li><a href="contactenos.html">Contactenos</a></li>
 				</ul>
 			</nav>
 
