Portafolio de servicios

--- a/servicios.html
+++ b/servicios.html
@@ -46,9 +46,13 @@
 						<div class="content">
 							<header class="align-center">
 								<p>Kudohub Technology</p>
-								<h2>CORREO ELECTRONICO</h2>
+								<h2>CICD</h2>
 							</header>
-							<p>Quieres administrar tus correos electrónicos ?. Te ofrecemos las mejores soluciones para administrar tus correos electrónicos desde las plataformas Gsuite de Google hasta administradores privados como Squirrelmail, Zimbra, entre otros…</P>
+							<div align="center"><img src="/images/cicd.png"></div>
+							<p>La parte de CI de CICD se puede resumir con: desea que todas las partes de lo que se necesita para hacer que su aplicación vaya al mismo lugar y se ejecute a través de los mismos procesos con resultados publicados en un lugar de fácil acceso.</P>
+                            <p>¡Una de las mejores cosas que puede hacer para evitar esto, al igual que otras cosas en el software, es automatizarlo! Haga que su código se implemente automáticamente en cualquier lugar donde usted o sus usuarios puedan acceder.
+                                Hay muchas herramientas disponibles para permitirte hacer esto fácilmente.</P>
+                            <p>Por eso en Kudohub ponemos a su disposición la experticia necesaria para realizar la arquitectura y administración de herramientas como Jenkins, Circleci, Actions Github, GitLab, Budy, Travis, Argo, Bitbucket, para que pueda llevar sus ideas a otro nivel.</p>
 						</div>
 					</div>
 				</div>
@@ -60,9 +64,12 @@
                                                 <div class="content">
                                                         <header class="align-center">
                                                                 <p>Kudohub Technology</p>
-                                                                <h2>HOSTING</h2>
+                                                                <h2>CLOUD COMPUTING</h2>
                                                         </header>
-                                                        <p>Kudohub te ofrece  el mejor servicio de Alojamiento Web Hosting y Servidores VPS en Colombia. WebHosting con Certificados SSL y Dominio Gratis.</P>
+														<div align="center"><img src="/images/cp.png"></div>
+                                                        <p>cloud computing consiste en la posibilidad de ofrecer servicios a través de Internet.<br>
+                                                            La computación en la nube es una tecnología nueva que busca tener todos nuestros archivos e información en Internet, sin preocuparse por poseer la capacidad suficiente para almacenar información en nuestro ordenador.</P>
+                                                        <p>En Kudohub tenemos a los expertos mas capacitadados en los diversos proveedores de nube de la actualidad como AWS, GCP, Azure para ayudarle a fortalecer su negocio.</p
                                                 </div>
                                         </div>
                                 </div>
@@ -74,13 +81,11 @@
                                                 <div class="content">
                                                         <header class="align-center">
                                                                 <p>Kudohub Technology</p>
-                                                                <h2>CRM</h2>
+                                                                <h2>INFRAESTRUCTURA COMO CÓDIGO</h2>
                                                         </header>
-							<p>Con Kudohub No sólo estás adquiriendo un CRM (Customer Relationship Management), sino que estás invirtiendo en una solución para resolver uno o más problemas críticos del negocio. El éxito de esta solución no será determinado solo por el software. El éxito se basa en la combinación correcta de personas, procesos y tecnología para lograr un objetivo común.</p>
-
-
-
-							<p>Utilizamos SugarCRM porque ofrece una variedad de soluciones para abordar los desafíos específicos de tu organización y de la industria. Estas soluciones combinan la adaptabilidad de la plataforma Sugar, un sólido ecosistema de trabajo y la experiencia de SugarCRM para involucrarse con sus clientes y satisfacer tus necesidades empresariales más críticas.</P>
+													<div align="center"><img src="/images/iac.png"></div>
+							<p>El concepto de infraestructura como código no es más que la forma de automatización de nuestra infraestructura a través de código .</p>
+                            <p>Por eso Kudohub lleva a su empresa las plataformas que le permitiran llevar su infraestructura al punto de ser codificada y reutilizable en toda situación que requiera, por esa razón lo invitamos a contactarnos para enseñarle recursos como: Terraform, Cloudformation, Ansible, Puppet, Shift y todo el poderio que pueden traer dentro de su organización.</p>
                                                 </div>
                                         </div>
                                 </div>
@@ -92,9 +97,12 @@
                                                 <div class="content">
                                                         <header class="align-center">
                                                                 <p>Kudohub Technology</p>
-                                                                <h2>SOLUCIONES DE RESPALDO DE INFORMACION</h2>
+                                                                <h2>MICROSERVICIOS</h2>
                                                         </header>
-                                                        <p>Aún no tienes una solución de respaldo de tu información?, con Kudohub podrás tener un backup de tu información para que puedas prevenir pérdidas de información o para que en caso de que necesites restaurar tu sistema puedes contar con la información de tu sistema siempre disponible para solucionar tus necesidades.</P>
+														<div align="center"><img src="/images/micros.png"></div>
+                                                        <p>Una “arquitectura de microservicios” es un enfoque para desarrollar una aplicación software como una serie de pequeños servicios, cada uno ejecutándose de forma autónoma y comunicándose entre sí, por ejemplo, a través de peticiones HTTP a sus API.<br>
+                                                            Normalmente hay un número mínimo de servicios que gestionan cosas comunes para los demás (como el acceso a base de datos), pero cada microservicio es pequeño y corresponde a un área de negocio de la aplicación.</p>
+                                                        <p>Aún no tienes una solución para construir tus microservicios?, con Kudohub podrá tener sus microservicios con las mejores herramientas para su negocio como: Kubernetes, Docker, Helm, LXC, Vagrant, CRIO.</P>
                                                 </div>
                                         </div>
                                 </div>
@@ -106,88 +114,14 @@
                                                 <div class="content">
                                                         <header class="align-center">
                                                                 <p>Kudohub Technology</p>
-                                                                <h2>SOLUCIONES DE NETWORKINGO</h2>
+                                                                <h2>ADMINISTRACIÓN DE SISTEMAS</h2>
                                                         </header>
-                                                        <p>Necesitas administrar tu infraestructura y no sabes como?, no sufras mas Kudohub tiene para ti las mejores soluciones de Networking para que puedas contar con la tranquilidad de que tu red estara profesionalmente administrada por Ingenieros expertos en soluciones On Premise (En Sitio) o Cloud (En la nube).</P>
+													<div align="center"><img src="/images/ads.png"><img src="/images/net.png"></div>
+                                                        <p>Necesitas administrar tu infraestructura y no sabes como?, no sufras mas Kudohub tiene para ti las mejores soluciones de administración para sus sistemas Linux, Servidores Web (HAproxy, Nginx, Apache), Networking, para que pueda contar con la tranquilidad de que sus sistemas estaran profesionalmente administrados por Ingenieros expertos.</P>
                                                 </div>
                                         </div>
                                 </div>
                         </section>
-			
-			 <section id="two" class="wrapper style2">
-                                <div class="inner">
-                                        <div class="box">
-                                                <div class="content">
-                                                        <header class="align-center">
-                                                                <p>Kudohub Technology</p>
-                                                                <h2>SOLUCIONES DE SEGURIDAD</h2>
-                                                        </header>
-                                                        <p>Que tu empresa no sea vulnerada por no contar con la solución de seguridad adecuada para proteger tu información, Kudohub te ofrece las soluciones de seguridad más acertadas para cuidar la salud informática de tu empresa, trabajamos con los Firewalls de los líderes del mercado conforme al cuadrante Gartner para que tengas la garantía del respaldo que te ofrecen nuestras soluciones, no lo pienses Fortinet, Cisco, HP, Sophos son algunos de las compañías con las que cuidamos tu compañía.</P>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-			
-			 <section id="two" class="wrapper style2">
-                                <div class="inner">
-                                        <div class="box">
-                                                <div class="content">
-                                                        <header class="align-center">
-                                                                <p>Kudohub Technology</p>
-                                                                <h2>REDES INALAMBRICAS - WIFI</h2>
-                                                        </header>
-                                                        <p>Cansado de que tu red Wifi no sea estable y confiable?, Kudohub te ofrece la solución adecuada para que tus redes inalámbricas operén conforme a tus necesidades, te brindamos estudios del lugar para determinar cuáles son las principales cualidades de tu arquitectura física y con base en ello determinar cuáles son los mejores dispositivos para suplir tu necesidad.</P>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-			
-			 <section id="two" class="wrapper style2">
-                                <div class="inner">
-                                        <div class="box">
-                                                <div class="content">
-                                                        <header class="align-center">
-                                                                <p>Kudohub Technology</p>
-                                                                <h2>ECM</h2>
-                                                        </header>
-							<p>El caos con los documentos aparece cuando estos se guardan en varios lugares: ordenadores portátiles, memoria USB, unidades de red y correo electrónico, y en diversos sitios de compartición de ficheros. Estos silos de contenido frenan la productividad empresarial y aumentan los riesgos de seguridad.</p>
-
-
-							<p>La solución de gestión de documentos de Alfresco permite controlar el contenido de la empresa. Los ficheros importantes, como los contratos legales, activos de marketing y documentos de ingeniería, pueden encontrarse, compartirse y protegerse fácilmente. Es más, Alfresco maximiza el valor del contenido integrándose en los procesos empresariales centrales. La información llega a las personas adecuadas en el momento justo, en las aplicaciones y dispositivos que usan para hacer sus trabajos.</P>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-			
-			 <section id="two" class="wrapper style2">
-                                <div class="inner">
-                                        <div class="box">
-                                                <div class="content">
-                                                        <header class="align-center">
-								<p>Kudohub Technology</p>
-                                                                <h2>TELEFONIA VOZ SOBRE IP</h2>
-                                                        </header>
-                                                        <p>Necesitas configurar tu planta pbx y administrar tu red de telefonía Voz-IP ?, en Kudohub te ofrecemos Elastix como aliado ya que al ser una distribución creada por Palosanto Solutions que incluye, entre otras aplicaciones, Asterisk,  FreePBX (una interfaz web de configuración, un sistema de base de datos (MySQL), un sistema de mensajería instantánea (OpenFire), soporte para fax (Hylafax) y un CRM (vtiger) en un sólo paquete. Que brindaran a tu empresa una red correctamente configurada y una solución estable y completa para administrar tu red de telefonía.</P>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-			
-			 <section id="two" class="wrapper style2">
-                                <div class="inner">
-                                        <div class="box">
-                                                <div class="content">
-                                                        <header class="align-center">
-                                                                <p>Kudohub Technology</p>
-                                                                <h2>SOLUCIONES DE MONITOREO</h2>
-                                                        </header>
-                                                        <p>Te ofrecemos las mejores soluciones para el monitoreo de tus servidores y aplicaciones, de esta manera podras controlar y conocer el consumo que realizan tus servidores y aplicaciones para tomar acciones predictivas, preventivas y correctivas.</P>
-                                                </div>
-                                        </div>
-                                </div>
-                        </section>
-
-
 
 		<!-- Footer -->
 			<footer id="footer">
