--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="servicios.html">Servicios</a></li>
-	                                <li><a href="nosotros.html">Acerca De Kudohub</a></li>
+					<li><a href="servicios.html">Portafolio</a>
+					<ul>
+						<li><a href="">CICD</a></li>
+						<li><a href="">Computación En La Nube</a></li>
+						<li><a href="">Infraestructura Como Código</a></li>
+						<li><a href="">Microservicios</a></li>
+						<li><a href="">Administración De Sistemas</a></li>
+						</li>
+					</ul>
+					<li><a href="nosotros.html">Acerca De Kudohub</a></li>
 					<li><a href="contactenos.html">Contactenos</a></li>
 				</ul>
 			</nav>
